Apply suggestions from code review
Co-authored-by: Burt Beckwith <burt@burtbeckwith.com>